clusters/proxmox-home/apps/vikunja/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vikunja
  labels:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/component: namespace
