clusters/proxmox-home/apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:latest
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: files-storage
              mountPath: /app/vikunja/files
          livenessProbe:
            httpGet:
              path: /api/v1/info
              port: 3456
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: 3456
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: files-storage
          persistentVolumeClaim:
            claimName: vikunja-pvc
      restartPolicy: Always
