clusters/proxmox-home/apps/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - protocol: TCP
      port: 3456
      targetPort: 3456
