clusters/proxmox-home/apps/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress-mtls
  annotations:
   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
   nginx.ingress.kubernetes.io/auth-tls-secret: vikunja/ca-secret
   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/name: vikunja-ingress-mtls
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vikunja.mgsds.com
    secretName: vikunja.mgsds.com-tls
  rules:
  - host: vikunja.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port:
              number: 3456
